<resources>
    <string name="app_name">DrawingDiscussions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="drawing_name">Drawing Name</string>
    <string name="time_added">Time Added</string>
    <string name="_5">5</string>
    <string name="drawing_title">Drawing Title</string>
    <string name="no_image_added">No image Added</string>
    <string name="add_drawing">Add Drawing</string>
</resources>