<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="87dp"
    app:cardCornerRadius="10dp"
    android:elevation="5dp"
    app:cardBackgroundColor="#eef1f6"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivDrawingImage"
                android:layout_width="74dp"
                android:layout_height="74dp"
                android:src="@drawable/blue_brush"
                android:layout_marginStart="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

    <TextView
        android:id="@+id/tvDrawingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="18dp"
        android:text="@string/drawing_name"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:layout_marginTop="3dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_medium"
                android:maxLines="1"
                android:text="@string/time_added"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintTop_toBottomOf="@id/tvDrawingTitle"
                tools:layout_editor_absoluteX="85dp" />

            <TextView
                android:id="@+id/tvMarkers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/lightBlack"
                android:fontFamily="@font/poppins_medium"
                android:textSize="15sp"
                android:text="@string/_5"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <ImageView
                android:id="@+id/icLoc"
                android:layout_width="22dp"
                android:layout_height="22dp"
                app:layout_constraintRight_toLeftOf="@id/tvMarkers"
                app:layout_constraintBottom_toBottomOf="@id/tvMarkers"
                android:layout_marginBottom="2.4dp"
                android:layout_marginEnd="6dp"
                android:src="@drawable/iv_marker_blue"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>