<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddImageFragment">

    <include
        android:id="@+id/toolbar_add_image"
        layout="@layout/toolbar_main"/>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_image"
        android:inputType="textPersonName"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:paddingVertical="14dp"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:hint="@string/drawing_title"
        android:paddingEnd="12dp"
        android:textColorHint="@color/text_grey"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/poppins_medium"/>

    <com.example.drawingdiscussions.customui.ZoomClass
        android:id="@+id/ivCustom"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#f5f5f5"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/tvNoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ivCustom"
        app:layout_constraintBottom_toBottomOf="@id/ivCustom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/text_grey"
        android:textSize="18sp"
        android:text="@string/no_image_added" />
    <ImageView
        android:id="@+id/addImage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_baseline_add_photo_alternate_24"
        android:background="@drawable/btn_bg_circle"
        android:padding="14dp"
        android:layout_marginEnd="30dp"
        android:elevation="7dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaveDrawing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/btn_bg"
        android:paddingVertical="16dp"
        android:paddingHorizontal="60dp"
        android:stateListAnimator="@null"
        android:elevation="7dp"
        android:layout_marginBottom="40dp"
        android:text="@string/add_drawing"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@id/addImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>